[tool.poetry]
name = "app-store-connect-api-client"
version = "0.1.0"
description = ""
authors = ["Steven Athouel <sathouel@gmail.com>"]
readme = "README.md"
packages = [{include = "app_store_connect_api_client"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
authlib = "^1.2.0"
pandas = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
